# socstatspy

./: .gitignore  MANIFEST.in  NEWS.md  README.md  pyproject.toml  setup.py
LICENSES/: README.md
socstatspy/: __init__.py  client.py  data_fetcher.py  exceptions.py  utils.py
tests/: README.md  conftest.py  test_socstatspy.py
tutorials/: Getting_Started.ipynb
