[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socstatspy"
version = "0.1.0"
authors = [
    {name = "Emanuel Raptis", email = "emanuelraptis@gmail.com"},
]
description = "A Python wrapper for Socialstyrelsen's Statistics Database API"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
keywords = ["socialstyrelsen", "api", "statistics", "sweden", "health", "social"]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/xemarap/socstatspy"
Documentation = "https://github.com/xemarap/socstatspy/blob/main/README.md"
Repository = "https://github.com/xemarap/socstatspy"
"Bug Tracker" = "https://github.com/xemarap/socstatspy/issues"

[tool.setuptools]
license-files = ["LICENSE.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["socstatspy*"]
exclude = ["tests*"]